<resources>
    <string name="app_name">LITTER</string>
    <string name="title_activity_maps">Map</string>
    <string name="emailHint">Enter your Email Address…</string>
    <string name="passwordHint">Enter your Password…</string>
    <string name="forgotPasswordText">Forgot your password?</string>
    <string name="loginText">LOGIN</string>
    <string name="forgotEmailText">Forgot your email address?</string>
    <string name="username_hint">Enter your username…</string>
    <string name="confirm_hint">Confirm your password…</string>
    <string name="register_hint">REGISTER</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_out">Log Out</string>
    <string name="map">Map</string>
    <string name="messages">Messages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>